@@ -1,4 +1,4 @@
-The following changes have been made between John 1.8.0 and 1.8.0.9:
+The following changes have been made between John 1.8.0 and 1.8.0.10:
 
 * 3x interleaving for bcrypt on x86-64, except in AVX-enabled builds.
 Provides significant speedup on Core 2 CPUs.
@@ -24,6 +24,7 @@ Knights Corner), along with use of 512-bit SIMD intrinsics for bitslice DES.
 of NEON for bitslice DES).
 * Made a minor optimization to MMX and SSE2 assembly code for LM hash.
 * Dropped Ultrix and SCO support.
+* Don't probe for alternate config file names (like john.ini when on Unix).
 * Fixed a bug introduced in version 1.7.4 in the wordlist rules engine, where
 some sequences of rule commands could overflow a word buffer.
 * Fixed an out of bounds write bug in the external mode virtual machine.
@@ -363,4 +364,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.103 2016/08/23 22:41:18 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.104 2017/10/25 18:51:46 solar Exp $
